--- a/src/App.css
+++ b/src/App.css
@@ -37,21 +37,30 @@
   }
 }
 
+body {
+  background-color: #282c34;
+}
+
 .matrix {
-  margin: 0 auto;
+  margin-top:20px;
 }
 
 .rows {
   display: flex;
+  justify-content: center;
+}
+
+h1 {
+  color: white;
 }
 
 .cell {
   width: 50px; 
   height: 50px;
-  background-color: red;
+  background-color: white;
   border: 1px solid black;
 }
 
 .cell-alive{
-  background-color: black;;
+  background-color: fuchsia;
 }
